1. move infoblock_id & parent_id guessing logic from Admin/Controller/Content.php to Content\Entity::guessParentAndInfoblock() method 2. show "click" button in first visible panel 3. correct collection placeholder with gridview template (add TD with colspan) 4. correct Controller::getConfig() for non-system components (some logic moved to fx::getComponentFullNameByPath method) 5. Entity::validateWithForm returns false if form has any errors 6. resolve fx:of="action" correctly for non-system components

--- a/Admin/style/front.less
+++ b/Admin/style/front.less
@@ -370,6 +370,10 @@ body:not(.fx_mode_edit) .fx_entity_hidden {
     td&.fx_infoblock, td&.fx_area {
         display:table-cell !important;
     }
+    
+    tbody& {
+        display:table-row-group !important;
+    }
 }
 
 
